@@ -1,3 +1,9 @@
+2013-11-04 Riccardo Mottola <rm@gnu.org>
+
+	* GRBezierControlPoint.h
+	* GRBezierControlPoint.m
+	Initial support for supporting non-symmetrical handles. Disabled.
+
 2013-10-31 Riccardo Mottola <rm@gnu.org>
 
 	* GRDocView.m
